Refactor and prep for RequestReply

--- a/RequestReply.Shared/RequestReply.Shared.csproj
+++ b/RequestReply.Shared/RequestReply.Shared.csproj
@@ -44,9 +44,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BarEvent.cs" />
+    <Compile Include="Messages\BarEvent.cs" />
+    <Compile Include="Messages\HelloRequest.cs" />
+    <Compile Include="Messages\HelloResponse.cs" />
+    <Compile Include="Messages\IBarEvent.cs" />
+    <Compile Include="Messages\IUpdateFooCommand.cs" />
+    <Compile Include="Messages\UpdateFooVersion2Command.cs" />
     <Compile Include="Tools\JsonConfigFileReader.cs" />
-    <Compile Include="UpdateFooCommand.cs" />
+    <Compile Include="Messages\UpdateFooCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
