--- a/RequestReply.Sender/packages.config
+++ b/RequestReply.Sender/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Automatonymous" version="3.5.12" targetFramework="net462" />
   <package id="GreenPipes" version="1.0.10" targetFramework="net462" />
   <package id="MassTransit" version="3.5.7" targetFramework="net462" />
+  <package id="MassTransit.Automatonymous" version="3.5.7" targetFramework="net462" />
   <package id="MassTransit.AzureServiceBus" version="3.5.7" targetFramework="net462" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net462" />
   <package id="NewId" version="3.0.1" targetFramework="net462" />
