--- a/RequestReply.Shared/app.config
+++ b/RequestReply.Shared/app.config
@@ -22,6 +22,10 @@
         <assemblyIdentity name="NewId" publicKeyToken="b8e0e9f2f1e657fa" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.1.17" newVersion="3.0.1.17" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Automatonymous" publicKeyToken="b800c4cfcdeea87b" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.5.12.75" newVersion="3.5.12.75" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
