--- a/RequestReply.Receiver/RequestReply.Receiver.csproj
+++ b/RequestReply.Receiver/RequestReply.Receiver.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Consumers\ServeBarsCommandConsumer.cs" />
     <Compile Include="Consumers\IUpdateFooCommandConsumer.cs" />
     <Compile Include="Consumers\UpdateFooCommandVersion2Consumer.cs" />
+    <Compile Include="Other\ReceiveObserver.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Consumers\BarEventConsumer.cs" />
