--- a/RequestReply.Shared/RequestReply.Shared.csproj
+++ b/RequestReply.Shared/RequestReply.Shared.csproj
@@ -65,11 +65,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Messages\BarEvent.cs" />
-    <Compile Include="Messages\Product\CommitUpdateProductsBatchCommand.cs" />
-    <Compile Include="Messages\Product\NewProductData.cs" />
-    <Compile Include="Messages\Product\StartUpdateProductsBatchCommand.cs" />
+    <Compile Include="Messages\Product\FinishUpdateProducts.cs" />
+    <Compile Include="Messages\Product\ProductData.cs" />
+    <Compile Include="Messages\Product\UpdateProductsFinish.cs" />
+    <Compile Include="Messages\Product\UpdateProductsRollback.cs" />
     <Compile Include="Messages\Product\UpdateProductsSaga.cs" />
-    <Compile Include="Messages\Product\UpdateProductsCommand.cs" />
+    <Compile Include="Messages\Product\StartUpdateProducts.cs" />
+    <Compile Include="Messages\Product\UpdateProductsSequence.cs" />
     <Compile Include="Messages\Product\UpdateProductsStateMachine.cs" />
     <Compile Include="Messages\ServeBarsCommand.cs" />
     <Compile Include="Messages\ServeBarsResponse.cs" />
